libs/components/errors/testing/src/modules/error/error-image-harness.ts
import { SkyQueryableComponentHarness } from '@skyux/core/testing';

/**
 * Harness for interacting with an error image component in tests.
 */
export class SkyErrorImageHarness extends SkyQueryableComponentHarness {
  /**
   * @internal
   */
  public static hostSelector = 'sky-error-image';
}
